Fix: Horizontal scroll-bars are gone

--- a/res/roketi.less
+++ b/res/roketi.less
@@ -71,6 +71,7 @@ bold {
 
 .row {
 	padding: 20px 0;
+	margin: 0;
 }
 
 
